# leo

./: Cargo.toml
.circleci/: test-examples.sh
.integration/: Cargo.toml
.integration/tests/: testnet3.rs
compiler/ast/src/passes/: mod.rs  reconstructing_director.rs  reconstructing_reducer.rs  reconstructor.rs  reducer.rs  reducer_director.rs  visitor.rs
compiler/compiler/src/: compiler.rs  lib.rs  options.rs  test.rs
compiler/parser/src/parser/: statement.rs
compiler/passes/src/: lib.rs
compiler/passes/src/dead_code_elimination/: dead_code_eliminator.rs  director.rs  eliminate_expression.rs  eliminate_program.rs  eliminate_statement.rs  mod.rs  reducer.rs
compiler/passes/src/flatten_conditionals/: director.rs  flattener.rs  mod.rs  reducer.rs
compiler/passes/src/flattening/: flatten_expression.rs  flatten_statement.rs
compiler/passes/src/static_single_assignment/: director.rs  mod.rs  name_table.rs  reduce.rs  reducer.rs  rename_expression.rs  rename_program.rs  rename_statement.rs  rename_table.rs  static_single_assigner.rs
compiler/passes/src/type_checker/: check_statements.rs
compiler/passes/src/type_checking/: check_expressions.rs  check_program.rs  checker.rs
compiler/span/src/: symbol.rs
errors/src/errors/type_checker/: type_checker_error.rs
leo/commands/: build.rs
tests/expectations/compiler/address/: binary.out  branch.out  equal.out  gt_fail.out  gte_fail.out  lt_fail.out  lte_fail.out  ternary.out
tests/expectations/compiler/boolean/: and.out  conditional.out  equal.out  or.out  (+2 more)
tests/test-framework/benches/: leo_compiler.rs
(+381 files in other folders)
